# FastCapture

./: .clang-format  CMakeLists.txt
include/: FastCapture.h  FastCaptureDef.h
source/FastCapture/Windows/: FastCapture.cpp  Impl.cpp  Impl.h
source/FastCaptureInjectDll/: FastCaptureInjectDllDef.h  GLCapture.cpp  GLCapture.h  readme.md
source/FastCaptureInjectDll/Windows/: DllData.h  DllData.hpp  FastCaptureInjectDll.cpp  FastCaptureInjectDll.h  GlReadPixelsThread.cpp  GlReadPixelsThread.h  ReadPixelsThread.hpp  WglContext.cpp  WglContext.h
source/Utils/: GLUtils.hpp  Utils.hpp
source/Utils/Windows/: UtilsWindows.hpp
